[package]
name = "hanteker_cli"
description = "CLI tool to interface with Hantek handheld osilloscope (Hantek 2D42 and 2D72)"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/hkoosha/hanteker"
categories = ["command-line-utilities"]

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0"

clap = { version = "3.1", features = ["derive", "suggestions", "wrap_help"] }
clap_complete = "3.1"

libusb = "0.3"

hanteker_lib = "0.1.0"

