[package]
name = "hanteker_lib"
description = "Library to interface with Hantek handheld osilloscope (Hantek 2D42 and 2D72)"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/hkoosha/hanteker"

[dependencies]
log = "0.4"
thiserror = "1.0"
strum = "0.24"
strum_macros = "0.24"

libusb = "0.3"

clap = { version = "3.1", features = ["derive"], optional = true }
druid = { git = "https://github.com/linebender/druid", rev = "fc05e965c85fced8720c655685e02478e0530e94", optional = true }

[features]
default = []
gui = ["druid"]
cli = ["clap"]
